--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,6 +22,7 @@
             android:hint="用户名"
             android:inputType="phone"
             android:lines="1"
+            android:maxLength="11"
             android:textSize="54px" />
 
     </android.support.design.widget.TextInputLayout>
@@ -38,6 +39,7 @@
             android:hint="密码"
             android:inputType="textPassword"
             android:lines="1"
+            android:maxLength="20"
             android:textSize="54px" />
 
     </android.support.design.widget.TextInputLayout>
