--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -22,6 +22,7 @@
             android:hint="手机号"
             android:inputType="phone"
             android:lines="1"
+            android:maxLength="11"
             android:textSize="54px" />
     </android.support.design.widget.TextInputLayout>
 
@@ -36,6 +37,7 @@
             android:layout_height="wrap_content"
             android:hint="昵称"
             android:lines="1"
+            android:maxLength="12"
             android:textSize="54px" />
     </android.support.design.widget.TextInputLayout>
 
@@ -51,6 +53,7 @@
             android:hint="邮箱"
             android:inputType="textEmailAddress"
             android:lines="1"
+            android:maxLength="20"
             android:textSize="54px" />
     </android.support.design.widget.TextInputLayout>
 
@@ -65,7 +68,8 @@
             android:layout_height="wrap_content"
             android:hint="密码"
             android:inputType="textPassword"
-            android:lines="1" />
+            android:lines="1"
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -79,11 +83,12 @@
             android:layout_height="wrap_content"
             android:hint="重复密码"
             android:inputType="textPassword"
-            android:lines="1" />
+            android:lines="1"
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_Login"
+        android:id="@+id/btn_Register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32px"
