完善股票详情模块

--- a/app/src/main/res/drawable/ic_search_f.xml
+++ b/app/src/main/res/drawable/ic_search_f.xml
@@ -13,6 +13,6 @@
     <item
         android:width="24dp"
         android:height="24dp"
-        android:drawable="@drawable/ic_search_24dp"
+        android:drawable="@drawable/ic_search"
         android:gravity="center" />
 </layer-list>
