--- a/app/src/main/res/layout/app_bar_base.xml
+++ b/app/src/main/res/layout/app_bar_base.xml
@@ -12,7 +12,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/Toolbar"
@@ -27,5 +27,6 @@
         android:visibility="gone"
         app:tabSelectedTextColor="@color/lightcoral"
         app:tabTextColor="@color/gainsboro" />
+
 
 </android.support.design.widget.AppBarLayout>
