--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <include layout="@layout/app_bar" />
+    <include layout="@layout/app_bar_base" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_Main_Content"
