--- a/app/src/main/res/layout/frag_search.xml
+++ b/app/src/main/res/layout/frag_search.xml
@@ -23,7 +23,7 @@
             android:paddingRight="20px"
             android:paddingTop="10px">
 
-            <android.support.v7.widget.AppCompatAutoCompleteTextView
+            <EditText
                 android:id="@+id/atv_Search_Input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -32,13 +32,14 @@
                 android:background="@null"
                 android:hint="请输入股票代号"
                 android:imeOptions="actionSearch"
+                android:inputType="text"
                 android:lines="1" />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
-                android:src="@drawable/ic_search_24dp_f" />
+                android:src="@drawable/ic_search_f" />
         </LinearLayout>
     </io.codetail.widget.RevealFrameLayout>
 
