--- a/app/src/main/res/layout/frag_favor.xml
+++ b/app/src/main/res/layout/frag_favor.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_Favor_Refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="自选" />
-</LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_Favor_List"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout>
