--- a/app/src/main/res/layout/frag_trade.xml
+++ b/app/src/main/res/layout/frag_trade.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="交易" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_Trade_Page"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
