--- a/app/src/main/res/layout/frag_info.xml
+++ b/app/src/main/res/layout/frag_info.xml
@@ -1,181 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_UserInfo_Refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/activity_vertical_margin"
-    android:background="@color/whitesmoke"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:paddingBottom="40px"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="40px">
-
-        <ImageView
-            android:layout_width="200px"
-            android:layout_height="200px"
-            android:src="@mipmap/ic_chat_default_avatar" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:background="@color/whitesmoke"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="32px"
-            android:orientation="vertical">
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:paddingBottom="40px"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="40px">
 
-            <TextView
-                android:id="@+id/tv_UserInfo_Nick"
+            <ImageView
+                android:layout_width="200px"
+                android:layout_height="200px"
+                android:src="@mipmap/ic_chat_default_avatar" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="42px"
-                tools:text="咕嘿嘿" />
+                android:layout_marginLeft="32px"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_UserInfo_Username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="42px"
-                tools:text="账号：" />
+                <TextView
+                    android:id="@+id/tv_UserInfo_Nick"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="42px"
+                    tools:text="咕嘿嘿" />
+
+                <TextView
+                    android:id="@+id/tv_UserInfo_Username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="42px"
+                    tools:text="账号：" />
+            </LinearLayout>
         </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_UserInfo_AccountDetail"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            android:background="@drawable/bg_info_item"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <ImageView
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_vip" />
+
+            <TextView
+                android:id="@+id/tv_UserInfo_Account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="120px"
+                android:text="支付账号：尚未绑定"
+                android:textColor="@color/black"
+                android:textSize="42px" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_arrow_right" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/rl_UserInfo_Recharge"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            android:layout_marginTop="20px"
+            android:background="@drawable/bg_info_item"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <ImageView
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_money" />
+
+            <TextView
+                android:id="@+id/tv_UserInfo_Balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="120px"
+                android:text="余额：0"
+                android:textColor="@color/black"
+                android:textSize="42px" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_arrow_right" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_UserInfo_Settings"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            android:layout_marginTop="20px"
+            android:background="@drawable/bg_info_item"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <ImageView
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_settings" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="120px"
+                android:text="设置"
+                android:textColor="@color/black"
+                android:textSize="42px" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_arrow_right" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_UserInfo_About"
+            android:layout_width="match_parent"
+            android:layout_height="140px"
+            android:layout_marginTop="20px"
+            android:background="@drawable/bg_info_item"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <ImageView
+                android:layout_width="80px"
+                android:layout_height="80px"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_notice" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="120px"
+                android:text="关于"
+                android:textColor="@color/black"
+                android:textSize="42px" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:src="@mipmap/ic_arrow_right" />
+        </RelativeLayout>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_UserInfo_AccountDetail"
-        android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:background="@drawable/bg_info_item"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_vip" />
-
-        <TextView
-            android:id="@+id/tv_UserInfo_Account"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="120px"
-            android:text="支付账号：尚未绑定"
-            android:textColor="@color/black"
-            android:textSize="42px" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_arrow_right" />
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rl_UserInfo_BalanceDetail"
-        android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:layout_marginTop="20px"
-        android:background="@drawable/bg_info_item"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_money" />
-
-        <TextView
-            android:id="@+id/tv_UserInfo_Balance"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="120px"
-            android:text="余额：0"
-            android:textColor="@color/black"
-            android:textSize="42px" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_arrow_right" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_UserInfo_Settings"
-        android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:layout_marginTop="20px"
-        android:background="@drawable/bg_info_item"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_settings" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="120px"
-            android:text="设置"
-            android:textColor="@color/black"
-            android:textSize="42px" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_arrow_right" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rl_UserInfo_About"
-        android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:layout_marginTop="20px"
-        android:background="@drawable/bg_info_item"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="80px"
-            android:layout_height="80px"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_notice" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="120px"
-            android:text="关于"
-            android:textColor="@color/black"
-            android:textSize="42px" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/ic_arrow_right" />
-    </RelativeLayout>
-</LinearLayout>
+</zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout>
