--- a/app/src/main/res/layout/frag_trade.xml
+++ b/app/src/main/res/layout/frag_trade.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_Trade_Refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,4 +9,4 @@
         android:id="@+id/vp_Trade_Page"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+</zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout>
