--- a/app/src/main/res/layout/frag_search.xml
+++ b/app/src/main/res/layout/frag_search.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cc000000"
     android:orientation="vertical">
 
     <io.codetail.widget.RevealFrameLayout
@@ -18,10 +19,10 @@
             android:layout_marginRight="15px"
             android:background="@drawable/bg_search_bar"
             android:gravity="center_vertical"
-            android:paddingBottom="10px"
+            android:paddingBottom="20px"
             android:paddingLeft="20px"
             android:paddingRight="20px"
-            android:paddingTop="10px">
+            android:paddingTop="20px">
 
             <EditText
                 android:id="@+id/atv_Search_Input"
@@ -33,7 +34,8 @@
                 android:hint="请输入股票代号"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
-                android:lines="1" />
+                android:lines="1"
+                android:textSize="42px" />
 
             <ImageView
                 android:layout_width="wrap_content"
