--- a/app/src/main/res/layout/frag_stock_detail.xml
+++ b/app/src/main/res/layout/frag_stock_detail.xml
@@ -8,6 +8,7 @@
 
     <LinearLayout
         android:id="@+id/Stock_Result_View"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
