提交其他模块代码

--- a/app/src/main/res/layout/frag_trade.xml
+++ b/app/src/main/res/layout/frag_trade.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_Trade_Refresh"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,4 +8,4 @@
         android:id="@+id/vp_Trade_Page"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout>
+</LinearLayout>
