--- a/app/src/main/res/layout/frag_list.xml
+++ b/app/src/main/res/layout/frag_list.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_Favor_Refresh"
+    android:id="@+id/rl_Refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_Favor_List"
+        android:id="@+id/rv_List"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </zzh.project.stocksystem.widget.ScrollChildSwipeRefreshLayout>
