调整数字显示，增加输入长度限制

--- a/app/src/main/res/layout/frag_recharge.xml
+++ b/app/src/main/res/layout/frag_recharge.xml
@@ -60,6 +60,7 @@
             android:layout_toRightOf="@id/tv_Recharge_Money_Label"
             android:inputType="number"
             android:lines="1"
+            android:maxLength="6"
             android:text="0.0"
             android:textSize="42px" />
     </RelativeLayout>
