修复部分自适应适配问题

--- a/app/src/main/res/drawable/bg_info_item.xml
+++ b/app/src/main/res/drawable/bg_info_item.xml
@@ -3,5 +3,5 @@
     <solid android:color="@color/color_info_item" />
     <stroke
         android:width="1px"
-        android:color="@color/grey" />
+        android:color="#22000000" />
 </shape>
