--- a/app/src/main/res/drawable/ic_search_f.xml
+++ b/app/src/main/res/drawable/ic_search_f.xml
@@ -6,7 +6,7 @@
         <shape>
             <solid
                 android:width="1dp"
-                android:color="@color/grey" />
+                android:color="#808080" />
             <corners android:radius="15dp" />
         </shape>
     </item>
