--- a/app/src/main/res/layout/act_splash.xml
+++ b/app/src/main/res/layout/act_splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,8 +10,10 @@
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/gif_Splash_Loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="900px"
+        android:layout_height="900px"
         android:layout_centerInParent="true"
-        android:src="@drawable/loading" />
+        android:scaleType="fitCenter"
+        android:src="@drawable/loading"
+        app:layout_auto_baseheight="width" />
 </RelativeLayout>
