--- a/app/src/main/res/layout/act_stock_detail_bk.xml
+++ b/app/src/main/res/layout/act_stock_detail_bk.xml
@@ -55,13 +55,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <zzh.project.stocksystem.widget.AutoCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 app:cardCornerRadius="8dp">
 
-            </android.support.v7.widget.CardView>
+            </zzh.project.stocksystem.widget.AutoCardView>
 
         </LinearLayout>
 
