--- a/app/src/main/res/layout/adapter_hold_stock_item.xml
+++ b/app/src/main/res/layout/adapter_hold_stock_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="240px"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="10px"
     android:layout_marginRight="10px"
     android:layout_marginTop="10px"
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="240px"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -93,4 +93,4 @@
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</zzh.project.stocksystem.widget.AutoCardView>
