--- a/app/src/main/res/layout/adapter_stock_item.xml
+++ b/app/src/main/res/layout/adapter_stock_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="240px"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="10px"
     android:layout_marginRight="10px"
     android:layout_marginTop="10px"
@@ -13,13 +13,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="240px"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/Stock_Thumb"
             android:layout_width="260px"
-            android:layout_height="match_parent"
+            android:layout_height="240px"
             android:layout_gravity="center_vertical"
             android:scaleType="fitXY"
             android:src="@drawable/default_img" />
@@ -37,14 +37,14 @@
                 android:gravity="center_vertical">
 
                 <TextView
-                    android:gravity="center_vertical"
-                    android:lines="2"
                     android:id="@+id/Stock_Name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16px"
                     android:layout_weight="1"
                     android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:lines="2"
                     android:textColor="@color/black"
                     android:textSize="48px"
                     tools:text="浦发银行" />
@@ -91,4 +91,4 @@
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</zzh.project.stocksystem.widget.AutoCardView>
