--- a/app/src/main/res/layout/adapter_trade_item.xml
+++ b/app/src/main/res/layout/adapter_trade_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -110,4 +110,4 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20px"
         android:src="@mipmap/ic_review" />
-</android.support.v7.widget.CardView>
+</zzh.project.stocksystem.widget.AutoCardView>
