--- a/app/src/main/res/layout/frag_bind_card.xml
+++ b/app/src/main/res/layout/frag_bind_card.xml
@@ -20,8 +20,7 @@
             android:hint="卡号(16位)"
             android:inputType="number"
             android:lines="1"
-            android:maxLength="16"
-            android:textSize="54px" />
+            android:maxLength="16" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -36,8 +35,7 @@
             android:hint="真实姓名"
             android:inputType="text"
             android:lines="1"
-            android:maxLength="6"
-            android:textSize="54px" />
+            android:maxLength="6" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -52,8 +50,7 @@
             android:hint="证件号码(18位)"
             android:inputType="number"
             android:lines="1"
-            android:maxLength="18"
-            android:textSize="54px" />
+            android:maxLength="18" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -68,8 +65,7 @@
             android:hint="密码"
             android:inputType="numberPassword"
             android:lines="1"
-            android:maxLength="8"
-            android:textSize="54px" />
+            android:maxLength="8" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -84,8 +80,7 @@
             android:hint="重复密码"
             android:inputType="numberPassword"
             android:lines="1"
-            android:maxLength="8"
-            android:textSize="54px" />
+            android:maxLength="8" />
     </android.support.design.widget.TextInputLayout>
 
 
