--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -22,8 +22,7 @@
             android:hint="用户名"
             android:inputType="phone"
             android:lines="1"
-            android:maxLength="11"
-            android:textSize="54px" />
+            android:maxLength="11" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -39,8 +38,7 @@
             android:hint="密码"
             android:inputType="textPassword"
             android:lines="1"
-            android:maxLength="20"
-            android:textSize="54px" />
+            android:maxLength="20" />
 
     </android.support.design.widget.TextInputLayout>
 
