--- a/app/src/main/res/layout/frag_register.xml
+++ b/app/src/main/res/layout/frag_register.xml
@@ -22,8 +22,7 @@
             android:hint="手机号"
             android:inputType="phone"
             android:lines="1"
-            android:maxLength="11"
-            android:textSize="54px" />
+            android:maxLength="11" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -37,8 +36,7 @@
             android:layout_height="wrap_content"
             android:hint="昵称"
             android:lines="1"
-            android:maxLength="12"
-            android:textSize="54px" />
+            android:maxLength="12" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -53,8 +51,7 @@
             android:hint="邮箱"
             android:inputType="textEmailAddress"
             android:lines="1"
-            android:maxLength="20"
-            android:textSize="54px" />
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -69,8 +66,7 @@
             android:hint="密码"
             android:inputType="textPassword"
             android:lines="1"
-            android:maxLength="20"
-            android:textSize="54px" />
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -85,8 +81,7 @@
             android:hint="重复密码"
             android:inputType="textPassword"
             android:lines="1"
-            android:maxLength="20"
-            android:textSize="54px" />
+            android:maxLength="20" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
