--- a/app/src/main/res/layout/nav_bar.xml
+++ b/app/src/main/res/layout/nav_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<zzh.project.stocksystem.widget.AutoRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rg_NavBar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -78,4 +78,4 @@
         android:textColor="@color/color_nav_bar_item"
         android:textSize="42px" />
 
-</RadioGroup>
+</zzh.project.stocksystem.widget.AutoRadioGroup>
