--- a/app/src/main/res/layout/act_about.xml
+++ b/app/src/main/res/layout/act_about.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/whitesmoke"
@@ -37,13 +38,14 @@
             android:textSize="42px" />
 
         <TextView
+            android:id="@+id/tv_About_AppName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20px"
-            android:text="@string/app_name"
-            android:textSize="42px" />
+            android:textSize="42px"
+            tools:text="@string/app_name" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -62,13 +64,14 @@
             android:textSize="42px" />
 
         <TextView
+            android:id="@+id/tv_About_Version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20px"
-            android:text="1.0"
-            android:textSize="42px" />
+            android:textSize="42px"
+            tools:text="1.0" />
     </RelativeLayout>
 
     <RelativeLayout
