--- a/app/src/main/res/layout/app_bar_base.xml
+++ b/app/src/main/res/layout/app_bar_base.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.Toolbar
@@ -13,7 +14,7 @@
         android:theme="@style/Toolbar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <android.support.design.widget.TabLayout
+    <zzh.project.stocksystem.widget.AutoTabLayout
         android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
